sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: value ==- is not a member of Int
      if (nain==-1) {
              ^